# Styx

./: .gitignore  .gitmodules  Cargo.toml  Cargo.toml.orig  Makefile.toml  README.md  flake.nix  plan.plantuml  rust-toolchain.toml
atmega/: Cargo.toml  Makefile.toml  Ravedude.toml
atmega/.cargo/: config.toml
atmega/Jupiter1.0/: Jupiter1.0_Basic_Test.rs  Jupiter1.0_Test.rs
atmega/examples/: packet_exchange.rs  uart.rs
atmega/src/: i2c_slave.rs  main.rs  slave_main
atmega2560/atmega/: Cargo.toml  Ravedude.toml
atmega2560/atmega/src/: i2c_slave.rs  main.rs
bcm2711/jupiter-fsw/: Cargo.toml  runner.sh
bcm2711/jupiter-fsw/src/: constants.rs  main.rs  palantir.rs
bcm2711/jupiter-fsw/src/data/: packets.rs
bcm2711/jupiter-fsw/src/gpio/: mod.rs  read.rs  write.rs
bcm2711/jupiter-fsw/src/states/: battery_power.rs  ejection.rs  main_cam.rs  mod.rs  power_on.rs  shutdown.rs  skirt_seperation.rs  traits.rs
bcm2711/jupiter-fsw/src/tasks/: cam.rs  main_cam.rs  mod.rs  pins.rs  rbf.rs  telemetry.rs
bin-packets/: Cargo.toml  Makefile.toml
bin-packets/src/: commands.rs  device.rs  devices.rs  lib.rs  link.rs  packets.rs  phases.rs  time.rs  types.rs
bin-packets/src/data/: adcs.rs  mod.rs  scientific_data.rs  status.rs  telemetry.rs
bin-packets/src/device/: mod.rs  std.rs
bin-packets/src/packets/: mod.rs  status.rs  testing.rs
bme280/: Cargo.toml
bme280/src/: async.rs  async_mod.rs  lib.rs  sync_mod.rs
bmi323/: Cargo.toml
bmi323/src/: async_mod.rs  lib.rs  registers.rs  sync_mod.rs
bmm350/: Cargo.toml
bmm350/src/: async_mod.rs  lib.rs  sync_mod.rs
common/messages/bin-packets/: Cargo.toml  Makefile.toml
common/messages/bin-packets/.github/workflows/: rust.yml
common/messages/bin-packets/src/: commands.rs  devices.rs  i2c.rs  lib.rs  phases.rs  rgbstatus.rs
common/messages/bin-packets/src/data/: adcs.rs  mod.rs  scientific_data.rs  status.rs  telemetry.rs
common/messages/bin-packets/src/device/: mod.rs  std.rs
common/messages/bin-packets/src/packets/: mod.rs  status.rs  testing.rs
common/messages/tinyframe/: Cargo.toml
common/messages/tinyframe/src/: error.rs  lib.rs
common/messages/tinyframe/src/buffer/: mod.rs
common/messages/tinyframe/src/frame/: crc.rs  mod.rs  payload.rs  sequence.rs
common/signet/: .gitignore  Cargo.toml
common/signet/src/: error.rs  lib.rs  main.rs
common/signet/src/record/: mod.rs  packet.rs
common/signet/src/sdr/: radio_config.rs  sdr.rs
common/signet/src/signal/: estimator.rs  signal_config.rs  spectrum_analyzer.rs
common/signet/src/tools/: cli.rs
common/states/: Cargo.toml
common/states/src/: battery_state.rs  indicators.rs  lib.rs
ejector/: Cargo.toml  Makefile.toml  build.rs
ejector/.cargo/: config.toml
ejector/src/: device_constants.rs  lib.rs  main.rs  startup.rs  tasks.rs  usb_tasks.rs
ejector/src/communications/: link_layer.rs  mod.rs
ejector/src/phases/: mod.rs  states.rs
ejector/tests/: hc12_tests.rs
ground/data-cli/: Cargo.toml
ground/data-cli/src/: csv_translator.rs  main.rs  parser.rs  parser_builder.rs  temp.csv
icarus/: Cargo.toml  Makefile.toml
icarus/.cargo/: config.toml
icarus/src/: device_constants.rs  lib.rs  main.rs  startup.rs  tasks.rs  usb_commands.rs  usb_io.rs
icarus/src/actuators/: mod.rs  motor.rs  servo.rs
icarus/src/communications/: hc12.rs  link_layer.rs  mod.rs  serial_handler.rs
icarus/src/ngc/: control.rs  mod.rs  state.rs  transforms.rs
icarus/src/peripherals/: async_i2c.rs
icarus/src/phases/: mode.rs  states.rs
icarus/src/sensors/: bme280.rs  bno055.rs  mod.rs
ina260/: Cargo.toml  Makefile.toml
ina260/src/: lib.rs
jupiter-fsw/: .gitignore  Cargo.toml  Makefile.toml  jupiter.nix  template.db
jupiter-fsw/src/: constants.rs  db.rs  main.rs  palantir.rs  rbf.rs  states.rs  timing.rs
jupiter-fsw/src/avionics/: lsm6dsl.rs  mod.rs
jupiter-fsw/src/data/: packets.rs
jupiter-fsw/src/gpio/: mod.rs  read.rs  write.rs
jupiter-fsw/src/states/: battery_power.rs  ejection.rs  main_cam.rs  mod.rs  power_on.rs  shutdown.rs  skirt_seperation.rs  traits.rs
jupiter-fsw/src/tasks/: main_cam.rs  mod.rs  pins.rs  rbf.rs
machines/pi-4/munin/: Cargo.toml
machines/pi-4/munin/docs/: tasks.md
machines/pi-4/munin/src/: main.rs
machines/pi-5/jupiter-fsw/: Cargo.toml  jupiter.nix
machines/pi-5/jupiter-fsw/src/: constants.rs  main.rs  timing.rs
machines/pi-5/jupiter-fsw/src/avionics/: imu.rs  lsm6dsl.rs  (+1 more)
machines/pi-5/odin-compute/: Cargo.toml  odin.nix
machines/pi-5/odin-compute/src/: img_avg.rs  main.rs
machines/rp235x/ejector/: Cargo.toml
machines/rp235x/ejector/.cargo/: config.toml
machines/rp235x/ejector/src/: device_constants.rs  guard.rs  main.rs  startup.rs  tasks.rs
machines/rp235x/elara/: Cargo.toml  Makefile.toml
machines/rp235x/elara/src/: device_constants.rs  main.rs  startup.rs  tasks.rs
machines/rp235x/ins-test/: Cargo.toml
machines/rp235x/ins-test/src/: main.rs  main_blocking.rs  main_wifi.rs
machines/rp235x/simple/: Cargo.toml  Embed.toml
machines/rp235x/simple-async/: Cargo.toml  Embed.toml  build.rs
machines/rp235x/simple-async/src/: main.rs
machines/rp235x/simple/src/: main.rs
odin/odin-compute/: Cargo.toml
odin/odin-compute/src/: main.rs
odin/odin-compute/src/tasks/: signal_process.rs  signal_read.rs
rp235xx/ejector/: .gitignore  Cargo.toml  Makefile.toml
rp235xx/ejector/src/: device_constants.rs  guard.rs  main.rs  startup.rs  tasks.rs
rp235xx/ejector/src/actuators/: electromag.rs  mod.rs  servo.rs
rp235xx/ejector/src/phases/: states.rs
rp235xx/icarus/: Cargo.toml  Cargo.toml.orig
rp235xx/icarus/src/: device_constants.rs  device_constants.rs.orig  lib.rs  main.rs  main.rs.orig  startup.rs  startup.rs.orig  tasks.rs  tasks.rs.orig
rp235xx/icarus/src/actuators/: servo.rs
rp235xx/icarus/src/ngc/: earth.rs  state.rs
rp235xx/icarus/src/peripherals/: async_i2c.rs
rp235xx/icarus/src/phases/: mode.rs  states.rs
testing-cli/: Cargo.toml  testing-cli.nix
testing-cli/src/: main.rs
testing-cli/src/cli/: bincode_serialize.rs  commands.rs  enums.rs  mod.rs  serial.rs
(+235 files in other folders)
