[package]
name = "bin-packets"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
bincode = { version = "*", features = ["derive"], default-features = false }
defmt = "*"
embedded-io = "0.6.1"
heapless = { version = "0.8.0", features = ["defmt-03"] }
serde = { version = "*", features = ["derive"], default-features = false }

[features]
default = []
