[package]
name = "icarus"
version = "0.1.1"
edition = "2021"
build="build.rs"

[dependencies]
# HAL for the RP350X architecture
rp235x-hal = {version="0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt", "rtic-monotonic", "dcp-fast-f64"], optional = true}# Embedded-hal for io traits
embedded-hal-nb = "1.0.0"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
embedded-hal-bus = {version="0.3.0", features=["async"]}
# Rust safe bindings to register-level control
embedded-hal = "1.0.0"
embedded-hal-async = "1.0"
embedded-io = "0.6.1"

# Cortex-M peripherals
cortex-m = "0.7.7"
# Startup/Runtime for Cortex-M microcontrollers
cortex-m-rt = "0.7.5"
# RTIC for real-time operations
rtic = {version = "2.1.2"}
rtic-monotonics = "2.0.3"
rtic-monotonic = {version = "1.0.0", optional = true}

rtic-sync = "1.3.0"
# USB Device Support
usb-device = "0.3.2"
usbd-serial = "0.2.2"
# Time
embedded-time = "0.12.1"
fugit = "0.3.7"
# logging
defmt = "0.3"
defmt-rtt = "0.4.1"
heapless = "0.8.0"
bincode = {version="2.0.0-rc.3", features = ["derive", "alloc"], default-features = false}

# Packets
bin-packets = { path = "../bin-packets" }
# Allocator - requireed to get serde to work
linked_list_allocator = "0.10.5"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
rp235x-pac = "0.1.0"

# Sensors
#bme280 = { version = "0.5.1"}
#bmi323 = {path="../bmi323"}
#bmi323 = {git"https://github.com/MeechaelA/bmi323.git"} - Request Access
#bmm350 = {path="../bmm350"}
#bmm350 = {git"https://github.com/MeechaelA/bmm350.git"} - Request Access

# Target features
[features]
default = ["rp2350"]
rp2350 = [
    "dep:rp235x-hal",
    "rtic-monotonics/rp235x",
    "rtic/thumbv8main-backend"
]
