[package]
name = "testing-cli"
version = "0.1.0"
edition = "2024"

[dependencies]

# Packet Fomramting
bincode = "2.0.1"
bin-packets = { path = "../bin-packets", features = ["std","testing"]}

# USB Communication
serialport = {version = "*"}

# Time 
chrono = "0.4.42"

# CLI
clio = "*"
clap = {version = "4.5.48", features = ["derive"]}

# CSV Handling
csv = "1.3.1"

# Random number generation
rand = "0.9.2"

#terminal
colorize = {version = "*"}

# bit manipu
bytemuck = {version = "*"}

[profile.dev]
codegen-units = 356
incremental = true

[profile.release]
#codegen-units = 1
incremental = true
lto = true
codegen-units = 356
