[package]
name = "atmega"
version = "0.1.0"
authors = ["Lucas Thelen <thelenlucas028@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "atmega"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
heapless = "0.8.0"
avr-device = { version = "0.7.0", features = ["atmega2560"] }
common = {path = "../../common"}

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-mega2560"]
