[package]
name = "common-states"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
defmt = { version = "1.0.1", optional = true }
embedded-hal = "1.0.0"

[features]
default = ["defmt"]
std = ["bincode/std"]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]
