[package]
name = "data-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
bincode = { version = "*", features = ["derive"], default-features = false }
bin-packets = { path = "../../common/messages/bin-packets", features = ["std"] }
serde_json = "1.0.140"
csv = "1.3.1"
indexmap = "2.13.0"
chrono = "0.4.41"
rand = "0.9.2"

