[package]
name = "ejector"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
# HAL for the RP350X architecture
rp235x-hal = { version = "*", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
  "rtic-monotonic",
], optional = true }
# Rust safe bindings to register-level control
embedded-hal = "*"
embedded-io = "*"
# RTIC for real-time operations
rtic = { version = "2.1.2" }
rtic-monotonics = "2.0.3"
rtic-sync = "1.3.0"
# USB Device Support
usb-device = "0.3.2"
usbd-serial = "0.2.2"
fugit = "0.3.7"

# HC-12
hc12-rs = { git = "https://github.com/thelenlucas/hc12-rs.git", tag = "v0.0.1" }

# logging
defmt = "*"
defmt-rtt = "*"
heapless = "*"
bincode = { version = "2.0.0-rc.3", features = [
  "derive",
], default-features = false }

# Packets
bin-packets = { path = "../../bin-packets" }

common = { path = "../../common" }
tinyframe = { version = "0.1.0", path = "../../tinyframe" }

# Target features
[features]
default = ["rp2350"]
rp2350 = [
  "dep:rp235x-hal",
  "rtic-monotonics/rp235x",
  "rtic/thumbv8main-backend",
]
fast-startup = []
