[package]
name = "bin-packets"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
# Interim this points to Ethan's fork, but should be restored to the main branch in the future
#aether = {git = "https://github.com/Ethan-Pascuales/aether.git", features = ["serde", "bincode"]}
aether = {git = "https://github.com/AtmoPierce/aether.git", features = ["serde", "bincode"], optional=true}

# , features = ["serde"]
#bincode = { workspace = true, features = ["derive"], default-features = false }
# Some need bincode with std and some don't so better not to have this workspace pinned
bincode = {version = "2.0.1", default-features = false, features = ["derive"]}
defmt = { workspace = true}
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
serde = { version = "*", features = ["derive"], default-features = false }


[features]
default = []
std = ["bincode/std", "serde/std", "embedded-io/std", "aether"]
testing-cli = ["dep:clap/derive"]


