[package]
name = "jupiter-fsw"
version = "0.1.1"
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
bin-packets = { path = "../../../common/messages/bin-packets", features = ["std"] }
env_logger = "0.11.7"
get_if_addrs = "0.5.3"
gpio = "0.4.1"
i2cdev = "0.6.1"
lazy_static = "1.5.0"
log = { version = "0.4.26", features = ["std"] }
rppal = "0.22.1"
serde_json = "1.0.140"
serialport = "4.7.1"
ureq = { version = "3.0.10", features = ["json"] }
common-states = { path = "../../../common/states" }
embedded-hal = "1.0.0"
pylon-cxx = { git = "https://github.com/Ethan-Pascuales/pylon-cxx.git"}
wayfarer = { git = "https://github.com/Terminus-Suborbital-Research-Program/Wayfarer.git", branch = "main"}
aether = { git = "https://github.com/AtmoPierce/aether.git", features = ["std", "serde"]}
image = "0.25.10"
notify = "8.2.0"
linux-embedded-hal = "0.4.1"
adxl345_driver2 = "2.0.1"
bmi323 = { version = "0.2.0", features = ["sync"]}
DarkAverager = {path="../../../common/DarkAverager"}

[features]
default = []
packet_logging = []
