[package]
name = "ejector"
version = "0.1.1"
edition = "2021"
build = "build.rs"
autobins = false

[dependencies]
# HAL for the RP350X architecture
rp235x-hal = { version = "0.4.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
  "rtic-monotonic",
], optional = true }
# Rust safe bindings to register-level control
embedded-hal = "*"
embedded-io = "*"
# RTIC for real-time operations
rtic = { version = "2.1.2" }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick", "systick-64bit"] }
rtic-sync = "1.3.0"
rp235x-pac = { version = "0.2.0", features = ["rt"] }
# USB Device Support
usb-device = "0.3.2"
usbd-serial = "0.2.2"
fugit = "0.3.7"

# logging
defmt = "*"
defmt-rtt = "*"
heapless = "*"
#bincode = { workspace = true, features = [
#  "derive",
#], default-features = false }
bincode = {version = "2.0.1", default-features = false, features = ["derive"]}


# Packets
bin-packets = { path = "../../../common/messages/bin-packets" }

common-states = { path = "../../../common/states" }
tinyframe = { version = "0.1.0", path = "../../../common/messages/tinyframe" }
mcp9600 = { git = "https://github.com/besselfunct/mcp9600.git", default-features = false }

embedded-sdmmc = "0.9.0"
embedded-hal-bus = "*"
ws2812-rs = "0.3.1"


# Target features
[features]
default = []
rp2350 = [
  "dep:rp235x-hal",
  "rtic/thumbv8main-backend",
]
fast-startup = []

[[bin]]
name = "ejector"
path = "src/main.rs"
required-features = ["rp2350"]
