[package]
name = "simple-async"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rp235x-hal = { version = "0.4.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
  "rtic-monotonic",
], optional = true }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
fugit = "0.3.7"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
rtic = { version = "2.1.2" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic.git" }
rtic-sync = "1.3.0"
rp235x-pac = "0.1.0"

defmt = { workspace = true }
defmt-rtt = { workspace = true }
bmi323 = { path = "../../../sensors/bmi323-rs", features = ["async", "defmt"] }

[features]
default = ["rp2350"]
rp2350 = [
  "dep:rp235x-hal",
  "rtic-monotonics/rp235x",
  "rtic/thumbv8main-backend",
]
