[package]
name = "simple"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
# HAL for the RP350X architecture
rp235x-hal = { version = "0.4.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
], optional = true }

panic-halt = {version = "0.2"}

embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
# Rust safe bindings to register-level control
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}

# Cortex-M peripherals
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}

rp235x-pac = "0.1.0"

defmt = {workspace = true}
defmt-rtt = {workspace = true}
heapless = {workspace = true}
bmi323 = {path="../../../sensors/bmi323-rs", features = ["sync", "defmt"]}
rtt-target = { version = "0.6.1" }

# Target features
[features]
default = ["rp2350"]
rp2350 = [
    "dep:rp235x-hal",
]
